--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@
 title: Chouffy's Notes
 email: notes@chouffy.net
 description: Notes on research I do, mostly related to IT software & hardware.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://chouffy.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-remote_theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
 
