--- a/_config.yml
+++ b/_config.yml
@@ -80,4 +80,7 @@ gh_edit_branch: "master" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
+# Color scheme supports "light" (default) and "dark"
+color_scheme: dark
+
 ## end of theme settings
