--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,5 @@
 name: Publish changes to MkDocs 
+# From https://squidfunk.github.io/mkdocs-material/publishing-your-site/#with-github-actions
 on:
   push:
     branches:
@@ -11,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          # Required for mkdocs-git-revision-date-localized-plugin
           fetch-depth: 0
       - name: Configure Git Credentials
         run: |
@@ -26,5 +28,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+        # Required install of Python Markdown modules
       - run: pip install mkdocs-material mkdocs-ezlinked-plugin mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
